--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -433,12 +433,11 @@ rimLight.position.set(0, 50, -100);
 scene.add(rimLight);
 
 /* ENHANCED OCEAN */
-const oceanGeometry = new THREE.PlaneGeometry(5000, 5000, 128, 128);
+const oceanGeometry = new THREE.PlaneGeometry(5000, 5000, 1, 1);
 const oceanMaterial = new THREE.MeshStandardMaterial({
   color: 0x1e90ff,
-  roughness: 0.1,
-  metalness: 0.9,
-  side: THREE.DoubleSide
+  roughness: 0.9,
+  metalness: 0
 });
 const ocean = new THREE.Mesh(oceanGeometry, oceanMaterial);
 ocean.rotation.x = -Math.PI / 2;
@@ -446,12 +445,12 @@ ocean.position.y = -1;
 ocean.receiveShadow = true;
 scene.add(ocean);
 
-/* SIMPLE GREEN ISLAND GROUND - NO SHINE */
+/* ENHANCED ISLAND */
 const islandGeometry = new THREE.CylinderGeometry(20, 25, 3, 64);
 const islandMaterial = new THREE.MeshStandardMaterial({
-  color: 0x2E8B57, // Simple dark green
-  roughness: 1.0,   // Maximum roughness - no shine
-  metalness: 0.0    // No metalness at all
+  color: 0x228b22,
+  roughness: 0.9,
+  metalness: 0
 });
 const island = new THREE.Mesh(islandGeometry, islandMaterial);
 island.position.set(0, 1.5, 0);
@@ -459,12 +458,12 @@ island.castShadow = true;
 island.receiveShadow = true;
 scene.add(island);
 
-// Simple grass layer
+// Add island detail
 const islandDetailGeometry = new THREE.CylinderGeometry(19, 24, 0.5, 64);
 const islandDetailMaterial = new THREE.MeshStandardMaterial({
-  color: 0x3CB371, // Simple medium green
-  roughness: 1.0,   // Maximum roughness - no shine
-  metalness: 0.0    // No metalness at all
+  color: 0x32cd32,
+  roughness: 0.9,
+  metalness: 0
 });
 const islandDetail = new THREE.Mesh(islandDetailGeometry, islandDetailMaterial);
 islandDetail.position.set(0, 2.75, 0);
@@ -743,7 +742,7 @@ function createTree(x, z, scale = 1) {
     new THREE.MeshStandardMaterial({ 
       color: 0x8b5a2b, 
       roughness: 0.9,
-      metalness: 0.1
+      metalness: 0
     })
   );
   trunk.position.y = 4*scale;
@@ -760,7 +759,7 @@ function createTree(x, z, scale = 1) {
       new THREE.ConeGeometry(3.0*scale - i*0.5, 3.0*scale, 12),
       new THREE.MeshStandardMaterial({
         color: leafColors[Math.floor(Math.random() * leafColors.length)],
-        roughness: 0.8,
+        roughness: 0.9,
         metalness: 0
       })
     );
@@ -1668,20 +1667,8 @@ function animateUpgradesNPC() {
 }
 
 /* ===== ENHANCED MAIN LOOP ===== */
-let oceanTime = 0;
 function animate() {
  requestAnimationFrame(animate);
- 
- // Update ocean waves
- oceanTime += 0.02;
- const oceanPosition = ocean.geometry.attributes.position;
- for(let i = 0; i < oceanPosition.count; i++) {
-   const x = oceanPosition.getX(i);
-   const y = oceanPosition.getY(i);
-   const wave = Math.sin(x * 0.05 + oceanTime) * Math.cos(y * 0.05 + oceanTime) * 0.3;
-   oceanPosition.setZ(i, wave);
- }
- oceanPosition.needsUpdate = true;
  
  updateRod();
 
